<resources>
    <string name="app_name">Les Furibards De La Cuisine</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="tab_text_1">Historic</string>
    <string name="tab_text_2">Let\'s cook !</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="oven_api_key">vU231JWNs6s7Pb5K99lBSt1NpBPGr6Z7</string>
    <string name="login_successful">Login successful!</string>
    <string name="login_enter_email">Please enter email...</string>
    <string name="login_enter_password">Please enter password!</string>
    <string name="login_failed">Login failed! Please try again later</string>
    <string name="LoginContinuer">continue</string>
    <string name="QuitLogin">Quit</string>
    <string name="ContinueChoiceLogin">You have chosen Continue</string>
    <string name="QuitChoiceLogin">You chose Quit</string>
    <string name="NoConnection">Oops You don\'t have internet!</string>
    <string name="NoConnection2">Do you want to continue offline?</string>
    <string name="EnterIngredient">Please enter an ingredient</string>
    <string name="EnterQuantity">Please enter an quantity</string>
    <string name="EnterPhoneNumber">Please enter your phone number</string>
    <string name="NumberAdded">Number added !</string>
    <string name="FiltersValidation">Validation of your filters</string>
    <string name="RecipeDone">Your recipe is finished!</string>
    <string name="rating">Your rating is :</string>
    <string name="SavedRecipe">Saved recipe !</string>
    <string name="RecipeFinished">Your recipe is finished !</string>
    <string name="add_your_recipe">Add your recipe</string>
    <string name="title_recipe">Title</string>
    <string name="add_a_pic">Add a pic</string>
    <string name="ingredients">Ingredients :</string>
    <string name="quantity">Quantity</string>
    <string name="preparation_time">Preparation time :</string>
    <string name="number_of_persons">Number of persons :</string>
    <string name="save_recipe">Save recipe</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="add_a_filter_to_your_search">Add a filter to your search !</string>
    <string name="validate">Validate</string>
    <string name="filters">Filters</string>
    <string name="find_a_recipe">Find a recipe</string>
    <string name="category">Category :</string>
    <string name="calories">Calories :</string>
    <string name="instructions">Instructions :</string>
    <string name="description">Description :</string>
    <string name="it_s_ready">It\'s ready !</string>
    <string name="add_your_phone_number">Add your phone number</string>
    <string name="disconnect">Disconnect</string>
    <string name="welcome_to_offline_mode">Welcome to offline mode !</string>
    <string name="you_have_already_cooked">You have already cooked :</string>
    <string name="note_the_recipe">Note the recipe !</string>
    <string name="share_the_recipe">SHARE THE RECIPE :</string>
    <string name="share">Share</string>
    <string name="choose_the_user">Choose the user :</string>
    <string name="send_form">Send add recipe form</string>
    <string name="les_furibards_de_la_cuisine">Les furibards de la cuisine !</string>
    <string name="we_are_proposing">We are proposing</string>
    <string name="MustAddingredient">You must add an ingredient !</string>
    <string name="limitingredient">You can not add more ingredients, limited to 5</string>
    <string-array name="array_quantities">
        <item>1-inch piece</item>
        <item>10 oz jar</item>
        <item>17-oz can</item>
        <item>4-lb</item>
        <item>8-oz package</item>
        <item>9-inch</item>
        <item>bn</item>
        <item>c</item>
        <item>cl</item>
        <item>clove</item>
        <item>Cloves</item>
        <item>cn</item>
        <item>cup</item>
        <item>cups</item>
        <item>ds</item>
        <item>ears</item>
        <item>g</item>
        <item>head</item>
        <item>lb</item>
        <item>lg</item>
        <item>md</item>
        <item>medium</item>
        <item>ml</item>
        <item>null</item>
        <item>ounces</item>
        <item>oz</item>
        <item>pinch</item>
        <item>pk</item>
        <item>pn</item>
        <item>pt</item>
        <item>qt</item>
        <item>sl</item>
        <item>sm</item>
        <item>Sprig</item>
        <item>stalk</item>
        <item>stalks</item>
        <item>Stick</item>
        <item>tb</item>
        <item>Teabags</item>
        <item>teaspoon</item>
        <item>teaspoons</item>
        <item>ts</item>
        <item>Whole</item>
        <item>xl</item>
    </string-array>
    <string-array name="array_times">
        <item>Sélectionnez</item>
        <item>0 to 20 minutes</item>
        <item>20 to 40 minutes</item>
        <item>40 to 60 minutes</item>
        <item>More than 60 minutes</item>
    </string-array>
</resources>
